# microservices-sh

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  findings.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  task_plan.md  vitest.config.ts
.github/: CODEOWNERS  pull_request_template.md
claudedocs/: security-finding-admin-auth.md
docs/: dogfood-admin.md  interactive-setup-contracts.md  llms.txt  module-data-access-standard.md  operator-pilot-boundary.md  quickstart-proof.md  scaling-on-cloudflare.md  system-harness.md
plans/: 00-strategy-review.md  01-mvp-scope.md  02-product-validation.md  03-development-roadmap.md  04-cloudflare-architecture.md  05-agent-interface-and-module-contract.md  06-gtm-promotion.md  07-success-metrics-pricing.md  08-risk-register.md  09-interview-script.md  10-product-proposition-pricing.md  11-market-research-verification.md  12-assumption-validation-results.md  13-mcp-directory-distribution.md  14-landing-page-brand-brief.md  15-hono-cloudflare-runtime-decision.md  16-cli-sdk-mcp-packaging.md  17-mvp-detailed-execution-plan.md  18-mvp-agent-surface-implementation.md  19-module-docs-source-and-permissions.md  20-cli-first-create-app-strategy.md  21-auth-first-account-and-cli-plan.md  22-product-billing-cli-admin-portal.md  23-auth-billing-plan-review.md  24-service-topology-and-auth-comms.md  (+15 more)
templates/erp-shell-desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
templates/erp-shell-desktop-tauri/src-tauri/capabilities/: default.json
templates/erp-shell-desktop-tauri/src-tauri/src/: main.rs
(+3156 files in other folders)
