[package]
name = "erp-shell-desktop"
version = "0.1.0"
description = "microservices.sh ERP Shell desktop companion"
authors = ["microservices.sh"]
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "erp-shell-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
